implementado reporte equipos